examples/test/testpolicy15331.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15331
  namespace: namespace187
spec:
  podSelector:
    matchLabels:
      key27: value31
      key10: value5
      key6: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value12
          key42: value18
      podSelector:
        matchLabels:
          key27: value7
